fixed overlay, added blur behind text for h1 and the grouped <p> text

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
     background-image: url('https://omertith.sirv.com/LevelGround%20Site/ring.jpg');
     background-size: cover;
     background-attachment: fixed;
+    box-shadow:inset 0 0 0 2000px rgba(12, 11, 11, 0.5);
     height: 90vh;
 }
 
@@ -90,38 +91,40 @@ nav ul {
 .donate a {
     color: #024a81;
     text-transform: uppercase;
-    font-family: 'Roboto';
+    font-family: 'League Gothic';
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 h1 {
-    color: var(--color1);
+    color: var(--color2);
     font-family: 'Poppins';
     font-weight: 500;
-    font-size: 6.8rem;
+    font-size: 7rem;
     text-transform: uppercase;
     text-align: center;
+    backdrop-filter: blur(.1em);
 }
 
 header h1 + p {
-    color: var(--color1);
+    color: var(--color2);
     font-family: 'League Gothic';
-    font-weight: 400;
-    font-size: 2rem;
+    font-weight: 200;
+    font-size: 2.3rem;
     line-height: 1.3em;
-    text-transform: uppercase;
-    letter-spacing: .1em;
+    letter-spacing: .08em;
     text-align: center;
-    width: 85%;
+    width: 65%;
+    backdrop-filter: blur(.1em);
 }
 
 header div > span a {
-    color: var(--color1);
+    color: var(--color2);
     font-family: 'Poppins';
     font-weight: 200;
     font-size: 2rem;
     text-decoration: none;
+    backdrop-filter: blur(5em);
 }
 
 
